attached_assets/Pasted-env-load-env-production-env-env-export-EXPO-PUBLIC-STRAVA-CLIENT-ID-EXPO-PUBLIC-STRAVA-CLIENT-SE-1754293613507_1754293613507.txt
env: load .env.production .env
env: export EXPO_PUBLIC_STRAVA_CLIENT_ID EXPO_PUBLIC_STRAVA_CLIENT_SECRET EXPO_PUBLIC_CLARIFAI_API_KEY EXPO_PUBLIC_GOOGLE_VISION_API_KEY EXPO_PUBLIC_EMAILJS_SERVICE_ID EXPO_PUBLIC_EMAILJS_TEMPLATE_ID EXPO_PUBLIC_EMAILJS_PUBLIC_KEY EXPO_PUBLIC_API_URL EXPO_PUBLIC_VPS_URL EXPO_PUBLIC_DEV_SERVER_URL EXPO_PUBLIC_APP_STORE_URL EXPO_PUBLIC_SUPPORT_EMAIL
Starting Metro Bundler
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓░░░░░░░░░░ 43.5% (415/629)
iOS node_modules/expo-router/entry.js ▓▓▓▓▓▓▓▓▓▓▓▓░░░░ 77.4% (1287/1463)
iOS Bundling failed 6267ms node_modules/expo-router/entry.js (1669 modules)
SyntaxError: /Users/expo/workingdir/build/app/(client)/profil.tsx: Unterminated template. (985:18)

[0m [90m 983 |[39m   }[33m,[39m
 [90m 984 |[39m   checkmark[33m:[39m {
[31m[1m>[22m[39m[90m 985 |[39m     fontSize[33m:[39m [35m1[39m[32m``[39m[32m`text[39m
 [90m     |[39m                   [31m[1m^[22m[39m
 [90m 986 |[39m [32m6,[39m
 [90m 987 |[39m [32m    color: '#FFFFFF',[39m
 [90m 988 |[39m [32m    fontWeight: 'bold',[39m[0m
SyntaxError: SyntaxError: /Users/expo/workingdir/build/app/(client)/profil.tsx: Unterminated template. (985:18)

[0m [90m 983 |[39m   }[33m,[39m
 [90m 984 |[39m   checkmark[33m:[39m {
[31m[1m>[22m[39m[90m 985 |[39m     fontSize[33m:[39m [35m1[39m[32m``[39m[32m`text[39m
 [90m     |[39m                   [31m[1m^[22m[39m
 [90m 986 |[39m [32m6,[39m
 [90m 987 |[39m [32m    color: '#FFFFFF',[39m
 [90m 988 |[39m [32m    fontWeight: 'bold',[39m[0m
SyntaxError: /Users/expo/workingdir/build/app/(client)/profil.tsx: Unterminated template. (985:18)

[0m [90m 983 |[39m   }[33m,[39m
 [90m 984 |[39m   checkmark[33m:[39m {
[31m[1m>[22m[39m[90m 985 |[39m     fontSize[33m:[39m [35m1[39m[32m``[39m[32m`text[39m
 [90m     |[39m                   [31m[1m^[22m[39m
 [90m 986 |[39m [32m6,[39m
 [90m 987 |[39m [32m    color: '#FFFFFF',[39m
 [90m 988 |[39m [32m    fontWeight: 'bold',[39m[0m
    at constructor (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:367:19)
    at TypeScriptParserMixin.raise (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6627:19)
    at Object.unterminated (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:5698:20)
    at readStringContents (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:5393:14)
    at TypeScriptParserMixin.readTemplateToken (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6547:9)
    at TypeScriptParserMixin.getTokenFromCode (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:6255:14)
    at TypeScriptParserMixin.getTokenFromCode (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:4827:11)
    at TypeScriptParserMixin.getTokenFromCode (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10004:11)
    at TypeScriptParserMixin.nextToken (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:5810:10)
    at TypeScriptParserMixin.next (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:5720:10)
    at TypeScriptParserMixin.parseTemplateElement (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11784:10)
    at TypeScriptParserMixin.parseTemplate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11791:23)
    at TypeScriptParserMixin.parseTaggedTemplateExpression (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11206:23)
    at TypeScriptParserMixin.parseSubscript (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11101:19)
    at TypeScriptParserMixin.parseSubscript (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9353:18)
    at TypeScriptParserMixin.parseSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11089:19)
    at TypeScriptParserMixin.parseExprSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11080:17)
    at TypeScriptParserMixin.parseUpdate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9801:20)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10795:39
    at TypeScriptParserMixin.allowInAnd (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12427:12)
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10795:17)
    at TypeScriptParserMixin.parseMaybeAssignAllowInOrVoidPattern (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12494:17)
    at TypeScriptParserMixin.parseObjectProperty (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11951:83)
    at TypeScriptParserMixin.parseObjPropValue (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11979:100)
    at TypeScriptParserMixin.parseObjPropValue (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9759:18)
    at TypeScriptParserMixin.parsePropertyDefinition (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11916:17)
    at TypeScriptParserMixin.parseObjectLike (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11831:21)
    at TypeScriptParserMixin.parseExprAtom (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11334:23)
    at TypeScriptParserMixin.parseExprAtom (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:4794:20)
    at TypeScriptParserMixin.parseExprSubscripts (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11076:23)
    at TypeScriptParserMixin.parseUpdate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11061:21)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11041:23)
    at TypeScriptParserMixin.parseMaybeUnary (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9852:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10894:61)
    at TypeScriptParserMixin.parseExprOps (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10899:23)
    at TypeScriptParserMixin.parseMaybeConditional (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10876:23)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10826:21)
    at TypeScriptParserMixin.parseMaybeAssign (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:9801:20)
    at /Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10795:39
    at TypeScriptParserMixin.allowInAnd (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12427:12)
    at TypeScriptParserMixin.parseMaybeAssignAllowIn (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:10795:17)
    at TypeScriptParserMixin.parseMaybeAssignAllowInOrVoidPattern (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:12494:17)
    at TypeScriptParserMixin.parseObjectProperty (/Users/expo/workingdir/build/node_modules/@babel/parser/lib/index.js:11951:83)
